--- a/user/css/style.css
+++ b/user/css/style.css
@@ -1,8 +1,11 @@
-.sections{
-    padding-top: 5%;
+.sections {
+  padding-top: 5%;
 }
 
 body {
-    padding-top: 3.5rem;
-  }
-  
+  padding-top: 3.5rem;
+}
+
+.card {
+    margin-bottom: 20px;
+}
